Fix logout link alignment and prevent favicon.ico errors from making noise.

--- a/YahooFantasyFootballTools/YahooFantasyFootballTools/Content/Site.css
+++ b/YahooFantasyFootballTools/YahooFantasyFootballTools/Content/Site.css
@@ -19,6 +19,7 @@ section {
 #userProfile
 {
     float: right;
+    padding: 8px 15px;
 }
 
 #main {
